# 7d2d_rh_localize_jp

./: .gitignore  README.md  manage.py  pyproject.toml
commands/: __init__.py  command.py  generate.py
data/Mods/0-CreaturePackHumans/Config/: Localization.txt
data/Mods/0_Ravenhearst_BookRemoval/Config/: Localization.txt
data/Mods/13erserk - Traps/Config/: Localization.txt
data/Mods/1_Ravenhearst_AdminTools/Config/: Localization.txt
data/Mods/1_Ravenhearst_AmmoDisassembly/Config/: Localization.txt
data/Mods/1_Ravenhearst_AnimalTraps/Config/: Localization.txt
data/Mods/1_Ravenhearst_BackpackStorage/Config/: Localization.txt
data/Mods/1_Ravenhearst_Backpacks/Config/: Localization.txt
data/Mods/1_Ravenhearst_BasicQuestline/Config/: Localization.txt
data/Mods/1_Ravenhearst_BasicQuestlineText/Config/: Localization.txt
data/Mods/1_Ravenhearst_BasicResources/Config/: Localization.txt
data/Mods/1_Ravenhearst_Baton/Config/: Localization.txt
data/Mods/1_Ravenhearst_BeeHive/Config/: Localization.txt
data/Mods/1_Ravenhearst_BirdsNest/Config/: Localization.txt
data/Mods/1_Ravenhearst_Bloodstains/Config/: Localization.txt
data/Mods/1_Ravenhearst_CashRegisters/Config/: Localization.txt
data/Mods/1_Ravenhearst_Charcoal/Config/: Localization.txt
data/localizations/: localizations.txt
data/templates/: ModInfo.xml
sdtd_mod_localizer/commands/: __init__.py  analyze.py  apply.py  command.py  extract.py  generate.py
sdtd_mod_localizer/entities/: __init__.py  dictionary.py  dictionary_entity.py  localization.py
tests/commands/: test_generate.py
(+153 files in other folders)
